--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-echo "hello world!"
+# Title of Your Code Lab
+
+## Introduction
+Brief introduction to the topic covered in the code lab.
+
+## Prerequisites
+List any prerequisites or requirements for completing the code lab.
+
+## Steps
+1. Step 1: Description of the first step.
+```python
+# Code snippet for the first step
+print("Hello, World!")
