--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
   <google-codelab codelab-gaid="Google Analytics ID"
                   codelab-ga4id=""
                   id="unique-codelab-identifier"
-                  title="Title of Your Code Lab"
+                  title="Basic Setup of a Node.js/Express.js App"
                   environment="web"
                   feedback-link="A link where users can go to provide feedback (e.g. the git repo)">
     
       <google-codelab-step label="Introduction" duration="0">
-        <p>Brief introduction to the topic covered in the code lab.</p>
+        <p>In this code lab we will setup a new web service project.</p>
 
 
       </google-codelab-step>
