--- a/flutter-basic-layout.html
+++ b/flutter-basic-layout.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
   <meta name="theme-color" content="#4F7DC9">
   <meta charset="UTF-8">
-  <title>Flutter Layout Walk-Through Guide &nbsp;&nbsp;More topics:<a href="#">Grid Layout<a></a></title>
+  <title>Flutter Layout Walk-Through Guide</title>
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Source+Code+Pro:400|Roboto:400,300,400italic,500,700|Roboto+Mono">
   <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://storage.googleapis.com/claat-public/codelab-elements.css">
@@ -26,7 +26,7 @@
                   id="code-labs-mobile-flutter-development"
                   title="Flutter Layout Walk-Through Guide"
                   environment="web"
-                  feedback-link="">
+                  feedback-link="">&nbsp;&nbsp;More topics:<a href="#">Grid Layout<a></a>
     
       <google-codelab-step label="Step 1 - Create Your Main.dart File" duration="0">
         <pre><code language="language-dart" class="language-dart">/* The import statements link the other screens to the main app.
