--- a/flutter-basic-layout.html
+++ b/flutter-basic-layout.html
@@ -26,7 +26,7 @@
                   id="code-labs-mobile-flutter-development"
                   title="Flutter Layout Walk-Through Guide"
                   environment="web"
-                  feedback-link="">&nbsp;&nbsp;More topics:<a href="#">Grid Layout<a></a>
+                  feedback-link="">
     
       <google-codelab-step label="Step 1 - Create Your Main.dart File" duration="0">
         <pre><code language="language-dart" class="language-dart">/* The import statements link the other screens to the main app.
