--- a/Machine-Learning.html
+++ b/Machine-Learning.html
@@ -415,7 +415,13 @@ plt.show()
 
 
       </google-codelab-step>
-    
+
+
+
+  <google-codelab-step label="Scikit-Learn Cheat Sheet" duration="10">
+  <img src="Scikit-Learn.pmg"></img>
+
+  </google-codelab-step> 
   </google-codelab>
 
   <script src="https://storage.googleapis.com/claat-public/native-shim.js"></script>
