--- a/Machine-Learning.html
+++ b/Machine-Learning.html
@@ -419,7 +419,7 @@ plt.show()
 
 
   <google-codelab-step label="Scikit-Learn Cheat Sheet" duration="10">
-  <img src="Scikit-Learn.pmg"></img>
+  <img src="Scikit-Learn.png"></img>
 
   </google-codelab-step> 
   </google-codelab>
