--- a/Machine-Learning.html
+++ b/Machine-Learning.html
@@ -55,14 +55,14 @@
       </google-codelab-step>
     
       <google-codelab-step label="Scalar, Vector, Matrix, &amp; Tensor" duration="10">
-        <p class="image-container"><img src="img\\7bb8280bb8191294.png"></p>
+        <p class="image-container"><img src="img\\https://raw.githubusercontent.com/finteger/finteger.github.io/main/scalar.png"></p>
 <h2 is-upgraded>Scalar</h2>
 <p>A scalar is simply a single number. For example 24.</p>
 <h2 is-upgraded>Vector</h2>
 <p>A vector is an ordered array of numbers and can be in a row or a column. A vector has just a single index, which can point to a specific value within the vector. For example, V2 refers to the second value within the vector, which is -8 in the graphic above.</p>
 <h2 is-upgraded>Matrix</h2>
 <p>A matrix is an ordered 2D array of numbers and it has two indices. The first one points to the row and the second one to the column. For example, M23 refers to the value in the second row and the third column, which is 8 in the yellow graphic above. A matrix can have multiple numbers of rows and columns. Note that a vector is also a matrix, but with only one row or one column.</p>
-<p class="image-container"><img src="img\\5d81284ec3b63524.png"></p>
+<p class="image-container"><img src="img\\https://raw.githubusercontent.com/finteger/finteger.github.io/main/tensor_0.png"></p>
 <h2 is-upgraded>Tensor</h2>
 <p>You can think of a tensor as an array of numbers, arranged on a regular grid, with a variable number of axes. A tensor has three indices, where the first one points to the row, the second to the column and the third one to the axis. For example, T232 points to the second row, the third column, and the second axis. This refers to the value 0 in the right tensor in the graphic below:</p>
 
