--- a/Machine-Learning.html
+++ b/Machine-Learning.html
@@ -78,7 +78,9 @@
       </google-codelab-step>
     
       <google-codelab-step label="Scalar, Vector, Matrix, &amp; Tensor" duration="10">
+        <img src="https://raw.githubusercontent.com/finteger/finteger.github.io/main/scalar.png" style="height:100px; width: auto;">  
         <h2 is-upgraded>Scalar</h2>
+<img src="https://raw.githubusercontent.com/finteger/finteger.github.io/main/tensor_0.png" style="height:100px; width: auto;">   
 <p>A scalar is simply a single number. For example 24.</p>
 <h2 is-upgraded>Vector</h2>
 <p>A vector is an ordered array of numbers and can be in a row or a column. A vector has just a single index, which can point to a specific value within the vector. For example, V2 refers to the second value within the vector, which is -8 in the graphic above.</p>
