--- a/CSS-Grid-Flexbox.html
+++ b/CSS-Grid-Flexbox.html
@@ -81,7 +81,7 @@
 &lt;/html&gt;
 </code></pre>
 <h2 is-upgraded>Output</h2>
-
+<img src="flex.png" height="100" width="auto">
 
       </google-codelab-step>
     
@@ -147,7 +147,7 @@
 &lt;/html&gt;
 </code></pre>
 <h2 is-upgraded>Output</h2>
-
+<img src="grid.png" height="100" width="auto">
 
       </google-codelab-step>
     
