--- a/variables.html
+++ b/variables.html
@@ -17,8 +17,8 @@
     .error {
       color: red;
     }
-    google-codelab #drawer ol li a {
-    width:50px;
+#drawer > div.steps > ol > li > a {
+max-width:50px;
 }
   </style>
 </head>
