--- a/variables.html
+++ b/variables.html
@@ -17,8 +17,8 @@
     .error {
       color: red;
     }
-#drawer > div.steps > ol > li > a {
-max-width:50px;
+#drawer  {
+width:100px;
 }
   </style>
 </head>
