--- a/variables.html
+++ b/variables.html
@@ -17,8 +17,8 @@
     .error {
       color: red;
     }
-#drawer  {
-width:80px !important;
+google-codelab #drawer {
+max-width:80px !important;
 }
   </style>
 </head>
