--- a/conditionals.html
+++ b/conditionals.html
@@ -20,6 +20,9 @@
     google-codelab #drawer {
 max-width:180px !important;
 }
+    google-codelab-step .instructions{
+    margin:0px !important;
+    }
   </style>
 </head>
 <body>
