--- a/variables.html
+++ b/variables.html
@@ -17,9 +17,12 @@
     .error {
       color: red;
     }
-google-codelab #drawer {
+    google-codelab #drawer {
 max-width:180px !important;
 }
+    google-codelab-step .instructions{
+    margin:0px !important;
+    }
   </style>
 </head>
 <body>
