--- a/functions.html
+++ b/functions.html
@@ -33,7 +33,7 @@
 <ol type="1">
 <li>Try this out in an editor: <pre><code language="language-dart" class="language-dart">void main() {
   // Calling a function with no return value
-  greetUser(&#39;Alice&#39;);
+  greetUser(&#39;Tom&#39;);
 
   // Calling a function with return value
   int sum = addNumbers(5, 7);
