--- a/classes.html
+++ b/classes.html
@@ -17,6 +17,12 @@
     .error {
       color: red;
     }
+            google-codelab #drawer {
+max-width:180px !important;
+}
+    google-codelab-step .instructions{
+    margin:0px !important;
+    }
   </style>
 </head>
 <body>
