--- a/classes.html
+++ b/classes.html
@@ -39,7 +39,7 @@ max-width:180px !important;
 <ol type="1">
 <li>Try this out in an editor: <pre><code language="language-dart" class="language-dart">void main() {
   // Creating an object from the class
-  Person person = Person(&#39;Alice&#39;, 30);
+  Person person = Person(&#39;Janet&#39;, 30);
 
   // Accessing fields and methods
   print(&#39;Name: ${person.name}&#39;);
