--- a/collections.html
+++ b/collections.html
@@ -32,7 +32,7 @@
         <p>Lists in Dart are ordered collections of items. You can create a list using the <code>List</code> class. Dart supports fixed-length and growable lists. Elements in a list can be accessed by their index, starting from 0.</p>
 <ol type="1">
 <li>Try this out in an editor: <pre><code language="language-dart" class="language-dart">void main() {
-  // Creating a list of integers
+  // Creating a list of integers.
   List&lt;int&gt; numbers = [1, 2, 3, 4, 5];
 
   // Adding an element
