--- a/classes.html
+++ b/classes.html
@@ -126,18 +126,13 @@ class ElectricCar extends Car {
       </google-codelab-step>
     
       <google-codelab-step label="Exercises" duration="0">
-        <h2 is-upgraded>Exercise 1: Create a <code>Car</code> Class</h2>
+      <h2 is-upgraded>Exercise 1: Create a <code>Book</code> Class</h2>
 <ol type="1">
-<li>Define a class <code>Car</code> with fields for <code>make</code>, <code>model</code>, and <code>year</code>.</li>
-<li>Add a method <code>displayInfo</code> that prints out the car&#39;s information in a readable format.</li>
-<li>Create an instance of the <code>Car</code> class and call the <code>displayInfo</code> method.</li>
+  <li>Define a class <code>Book</code> with fields for <code>title</code>, <code>author</code>, and <code>yearPublished</code>.</li>
+  <li>Add a method <code>displayDetails</code> that prints out the book&#39;s information in a readable format.</li>
+  <li>Create an instance of the <code>Book</code> class and call the <code>displayDetails</code> method.</li>
 </ol>
-<h2 is-upgraded>Exercise 2: Inheritance</h2>
-<ol type="1">
-<li>Define a class <code>ElectricCar</code> that inherits from the <code>Car</code> class.</li>
-<li>Add an additional field <code>batteryCapacity</code> to the <code>ElectricCar</code> class.</li>
-<li>Override the <code>displayInfo</code> method in the <code>ElectricCar</code> class to include the <code>batteryCapacity</code> in the output.</li>
-</ol>
+
 
 
       </google-codelab-step>
